--- a/index.html
+++ b/index.html
@@ -51,19 +51,23 @@
 
       <form class="intro-contact-form" action="#">
         <div class="intro-contact-form__fields">
-          <input class="intro-contact-form__field" type="text" placeholder="First Name">
+          <label for="name"></label>
+          <input class="intro-contact-form__field" id="name" name="name" type="text" placeholder="First Name">
         </div>
 
         <div class="intro-contact-form__fields">
-          <input class="intro-contact-form__field" type="text" placeholder="Last Name">
+          <label for="lastName"></label>
+          <input class="intro-contact-form__field" id="lastName" name="lastName" type="text" placeholder="Last Name">
         </div>
 
 
         <div class="intro-contact-form__fields">
-          <input class="intro-contact-form__field" type="text" placeholder="Email Address">
+          <label for="email"></label>
+          <input class="intro-contact-form__field" id="email" type="text" name="email" placeholder="Email Address">
         </div>
         <div class="intro-contact-form__fields">
-          <input class="intro-contact-form__field" type="text" placeholder="Password">
+          <label for="pass"></label>
+          <input class="intro-contact-form__field" id="pass" type="text" name="pass" placeholder="Password">
         </div>
         <div class="intro-contact-form__fields">
           <button class="intro-contact-form__btn" type="submit"> Claim your free trial</button>
